kitten/reported_bugs/rust/rust-78008/stderr.txt
error[E0308]: mismatched types

 --> mutant.rs:2:1

  |

1 | pub const fn sof < T > ( ) -> T {

  |                    -          - expected `T` because of return type

  |                    |

  |                    this type parameter

2 | 10

  | ^^ expected type parameter `T`, found integer

  |

  = note: expected type parameter `T`

                       found type `{integer}`



error[E0277]: the size for values of type `T` cannot be known at compilation time

 --> mutant.rs:5:25

  |

1 | pub const fn sof < T > ( ) -> T {

  |                    - required by this bound in `sof`

...

4 | fn test < T > ( ) {

  |           - this type parameter needs to be `Sized`

5 | let _ : [ u8 ; sof :: < T > ( ) ] ;

  |                         ^ doesn't have a size known at compile-time

  |

help: consider relaxing the implicit `Sized` restriction

  |

1 | pub const fn sof < T: ?Sized > ( ) -> T {

  |                     ^^^^^^^^



thread 'rustc' panicked at 'index out of bounds: the len is 0 but the index is 0', compiler/rustc_middle/src/ty/mod.rs:908:14

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (adef9da30 2020-10-13) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=3 -C target-cpu=skylake --crate-type staticlib



error: aborting due to 2 previous errors



Some errors have detailed explanations: E0277, E0308.

For more information about an error, try `rustc --explain E0277`.

